Added dome files and positioned content in header

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <script src="https://kit.fontawesome.com/1e05a339f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="header">
-    <div class="nav-left">
+  <header>
+    <div class="logo">
       <a href="index.html"><img src="../src/img/logo.svg" alt="Silicon logo"></a>
       <h2>Silicon</h2>
       <a href="#"><div class="features navigation-text">Features</div></a>
     </div>
-    <div class="nav-right">
+    <nav>
       <div class="dark-mode-container">
         <div class="dark-mode">Dark Mode</div>
         <label class="toggle">
@@ -29,16 +29,7 @@
         <i class="fa-regular fa-user"></i>
         <span>Sign in / up</span>
       </a>
-      <a href="#" class="btn-m btn-primary">
-        <i class="fa-regular fa-user"></i>
-        <span>Sign in / up</span>
-      </a>
-      <a href="#" class="btn-l btn-primary">
-        <i class="fa-regular fa-user"></i>
-        <span>Sign in / up</span>
-      </a>
-    </div>
+    </nav>
   </header>
-  <div class="btn-s btn-store">Google play</div>
 </body>
 </html>
