--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <small>App Store</small>
           </div>
         </a>
-        <a href="http://www.google.com" class="btn btn-store">
+        <a href="http://www.google.com" class="btn-l btn-store">
           <img src="/img/play-logo.svg" alt="Google Play">
           <div class="btn-store-text">
             <small>GET IT ON</small>
