Added blurry glass effect and sticky  on the header

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,6 @@
       </a>
     </nav>
   </header>
-
   <div class="showcase-container">
     <section class="showcase">
       <div class="display-4">
@@ -67,5 +66,78 @@
       </div>
     </section>
   </div>
+  <section class="logos">
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum1.svg" alt="logo 1"></a>
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum2.svg" alt="logo 2"></a>
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum3.svg" alt="logo 3"></a>
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum4.svg" alt="logo 4"></a>
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum5.svg" alt="logo 5"></a>
+    <a href="index.html" class="logo-card"><img src="/img/logoipsum6.svg" alt="logo 6"></a>
+  </section>
+
+  
+  <section class="app-features">
+    <div class="app-features-heading">
+      <h2>App Features</h2>
+    </div>
+    <p class="app-features-text body-text-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto doloribus culpa tempora expedita? Non voluptate dolores explicabo expedita nam accusantium blanditiis a sint magnam.</p>
+    <figure class="mobile-w-card">
+      <img src="/img/mobile-w-card.svg" alt="phone with creditcard">
+    </figure>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/credit-card-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Easy Payments</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/shield-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Data Security</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/bars-graphic-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Cost Statistics</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/communication-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Support 24/7</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/wallet-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Regular Cashback</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+    <section class="feature-card">
+      <figure class="symbol-box">
+        <img src="/img/smiley-symbol.svg" alt="creditcard symbol">
+      </figure>
+      <article>
+      <h3>Top Standards</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+      </article>
+    </section>
+  </section>
 </body>
 </html>
