added features-2 and testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,6 @@
     <a href="index.html" class="logo-card"><img src="/img/logoipsum5.svg" alt="logo 5"></a>
     <a href="index.html" class="logo-card"><img src="/img/logoipsum6.svg" alt="logo 6"></a>
   </section>
-
-  
   <section class="app-features">
     <div class="app-features-heading">
       <h2>App Features</h2>
@@ -139,5 +137,137 @@
       </article>
     </section>
   </section>
+  <div class="how-it-works-container">
+    <section class="how-it-works">
+      <h2>How Does It Work?</h2>
+      <figure class="mobile-my-budget">
+        <img src="/img/my-budget-nophone.svg" alt="Picture of budget graph">
+      </figure>
+      <figure class="mobile-your-cards">
+        <img src="/img/your-cards.svg" alt="Picture of creditcards and transactions">
+      </figure>
+      <figure class="mobile-your-cards-nophone">
+        <img src="/img/your-cards-nophone.svg" alt="Picture of transaction details">
+      </figure>
+      <figure class="mobile-transfers">
+        <img src="/img/transfer.svg" alt="Picture of transaction details">
+      </figure>
+      <figure class="mobile-transfers-nophone">
+        <img src="/img/transfer-nophone.svg" alt="Picture of transaction details">
+      </figure>
+      <figure class="mobile-transfers-2">
+        <img src="/img/transfer2-nophone.svg" alt="Picture of transaction details">
+      </figure>
+      <article class="article-transfer">
+        <h4>Transfers to people from
+          your contact list</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut eius ratione dolorem? Minima at aspernatur nulla sint, explicabo fuga!</p>
+      </article>
+      <article class="article-step3">
+        <h4>Step 3. Transfers to people from your contact list.
+          your contact list</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut eius ratione dolorem? Minima at aspernatur nulla sint, explicabo fuga!</p>
+      </article>
+      <article class="article-transaction">
+        <h4>Latest transaction history
+          your contact list</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem aut eius ratione dolorem? Minima at aspernatur nulla sint, explicabo fuga!</p>
+      </article>
+    </section>
+  </div>
+  <section class="app-features-2">
+    <div class="features-2-card">
+      <h2>Make your money transfer simple and clear</h2>
+      <ul>
+        <li>Banking transactions are free for you</li>
+        <li>No monthly cash commission</li>
+        <li>Manage payments and transactions online</li>
+      </ul>
+      <a href="#" role="button" class="btn-m btn-primary">Learn more -></a>
+    </div>
+    <div class="features-2-card">
+      <img src="/img/send-money-to.svg" alt="Picture of how to transfer money">
+    </div>
+    <div class="features-2-card">
+      <img src="/img/contacts.svg" alt="Send money to your contacts">
+    </div>
+    <div class="features-2-card">
+      <h2>Receive payment from international bank details</h2>
+      <div class="two-column-grid">
+        <div class="features-column">
+          <figure class="symbol-box">
+            <img src="/img/credit-card-symbol.svg" alt="creditcard symbol">
+          </figure>
+          <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+            </article>
+        </div>
+        <div class="features-column">
+          <figure class="symbol-box">
+            <img src="/img/wallet-symbol.svg" alt="wallet symbol">
+          </figure>
+          <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio?</p>
+            </article>
+        </div>
+      </div>
+      <a href="#" role="button" class="btn-m btn-primary">Learn more -></a>
+    </div>
+  </section>
+
+
+  <div class="testimonials-container">
+    <section class="testimonials">
+      <h2>Clients are<br/> Loving Our App</h2>
+      <div class="comment-card">
+        <div class="quote-box">
+          <i class="fa-solid fa-quote-left fa-xl"></i>
+        </div>
+        <div class="commentary-wrapper">
+          <div class="rating">
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+          </div>
+          <cite>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima cupiditate enim nulla ea consectetur? Assumenda deleniti magnam sit beatae necessitatibus facere, quod temporibus maxime. Consectetur repellat veritatis cum ipsum!"</cite>
+          <div class="user">
+            <figure class="avatar">
+              <img src="/img/female-avatar.svg" alt="avatar">
+            </figure>
+            <div class="user-details">
+              <h6>Fannie Summers</h6>
+              <small>Designer</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="comment-card">
+        <div class="quote-box">
+          <i class="fa-solid fa-quote-left fa-xl"></i>
+        </div>
+        <div class="commentary-wrapper">
+          <div class="rating">
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-solid fa-star star-filled"></i>
+            <i class="fa-regular fa-star star-outline"></i>
+          </div>
+          <cite>"Accusamus, voluptnus repudiandae, dolor omnis dolorum. A, mollitia libero qui rem, architecto quis, vitae quod quidem labore possimus eveniet."</cite>
+          <div class="user">
+            <figure class="avatar">
+              <img src="/img/male-avatar.svg" alt="avatar">
+            </figure>
+            <div class="user-details">
+              <h6>Albert Flores</h6>
+              <small>Developer</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
