--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Best payment app out there!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sass starter project</title>
+  <title>Silicon</title>
   <link rel="stylesheet" href="scss/main.scss">
   <script src="https://kit.fontawesome.com/1e05a339f0.js" crossorigin="anonymous"></script>
 </head>
@@ -214,8 +215,6 @@
       <a href="#" role="button" class="btn-m btn-primary">Learn more -></a>
     </div>
   </section>
-
-
   <div class="testimonials-container">
     <section class="testimonials">
       <h2>Clients are<br/> Loving Our App</h2>
@@ -223,7 +222,7 @@
         <div class="quote-box">
           <i class="fa-solid fa-quote-left fa-xl"></i>
         </div>
-        <div class="commentary-wrapper">
+        <div class="comment">
           <div class="rating">
             <i class="fa-solid fa-star star-filled"></i>
             <i class="fa-solid fa-star star-filled"></i>
@@ -247,7 +246,7 @@
         <div class="quote-box">
           <i class="fa-solid fa-quote-left fa-xl"></i>
         </div>
-        <div class="commentary-wrapper">
+        <div class="comment">
           <div class="rating">
             <i class="fa-solid fa-star star-filled"></i>
             <i class="fa-solid fa-star star-filled"></i>
@@ -269,5 +268,87 @@
       </div>
     </section>
   </div>
+  <section class="faq">
+    <h2>Any questions?<br/>
+      Check out the FAQs
+    </h2>
+    <p class="body-text-l">Still have unanswered questions and nned to get in touch?</p>
+    <div class="accordion-container">
+      <ul id="accordion" aria-label="accordion menu for frequently asked questions">
+        <li>
+          <label for="first"><h5>Is any of my personal information stored in the App?</h5><span id="arrow">-></span></label>
+          <input type="radio" name="accordion" id="first" checked>
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!</div>
+        </li>
+        <li>
+          <label for="second"><h5>What formats can i download my transaction history in?</h5><span>-></span></label>
+          <input type="radio" name="accordion" id="second">
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium illum facere quod minima iure impedit, ea laboriosam ab, soluta veritatis veniam hic at quos ut reprehenderit, esse accusamus debitis quaerat eligendi harum molestiae fugiat eius! Beatae quis sunt praesentium eligendi possimus voluptates, maxime, perspiciatis quidem ea repudiandae doloremque tempore itaque impedit suscipit, ullam quos? Sed atque reiciendis expedita doloremque consequuntur nostrum cum ea velit. Quos ad iure dolores. In consectetur maiores voluptas quis delectus unde incidunt amet ullam, quae aliquam quos praesentium! Architecto consequatur in fuga magni earum labore nostrum repellendus itaque. Nulla voluptate illo minus quaerat quidem error rerum autem debitis veniam quas id doloremque saepe, neque doloribus architecto enim cumque non fugiat sint. Temporibus commodi molestiae, minima, voluptatibus aperiam deserunt totam consequuntur quod, nobis magnam sed neque eligendi odio quaerat non. Expedita tenetur suscipit natus deserunt unde delectus odit fugiat quo aut reiciendis officiis, autem nisi neque amet! Consequuntur nihil omnis explicabo, eveniet id quidem voluptatibus natus cum debitis nam deleniti, quas sapiente fugit esse dolorum? Dignissimos assumenda molestiae, praesentium maiores molestias sunt, consectetur eligendi doloribus, hic ad cum. Repellat vitae est, porro hic magni illum odit doloribus magnam beatae temporibus qui rem? Vitae, hic officia? Ex harum ad neque necessitatibus itaque velit cumque voluptatum asperiores ipsa ullam quas voluptas modi, tenetur nihil? Impedit asperiores quasi pariatur ipsa cupiditate? Repellat, consequatur! Eos explicabo magni amet. Consectetur deleniti eaque, ad quidem aperiam repellat eveniet consequatur ab nisi exercitationem vitae, perferendis dolore eos saepe, accusantium dignissimos cum voluptate harum provident recusandae velit. Id repudiandae doloremque, nulla illo soluta, repellendus blanditiis esse veniam commodi numquam, atque laboriosam. Nam animi exercitationem quidem asperiores laudantium. Non, cupiditate velit consectetur officiis odio architecto! Aut praesentium accusantium quod omnis assumenda dolores, cupiditate laboriosam quo voluptate accusamus explicabo consequatur illum quidem tenetur commodi quis fuga doloremque error minima sit dolore sunt ut expedita. Labore dignissimos dolores odit, aspernatur ullam deleniti eius dolorum ab eveniet perferendis sit distinctio eaque cupiditate exercitationem ut fugiat neque expedita alias reiciendis adipisci consectetur animi iste! Deleniti illo, expedita cupiditate laboriosam pariatur explicabo eius assumenda, obcaecati est accusamus provident quod non. Ipsa ipsum natus ullam minus quam hic pariatur explicabo. Libero impedit ad mollitia rerum vitae consequatur eaque! Nemo, id officiis ratione facilis animi voluptatem mollitia quibusdam natus ipsum? Sequi voluptate sunt nostrum officia dolore obcaecati minima corrupti veniam amet aliquam, maxime vitae dolorem, vel temporibus doloremque ex fuga mollitia explicabo nesciunt, possimus voluptatem quo tempora numquam magni. Praesentium, doloremque dicta vero aspernatur voluptates aut, iusto ipsa sapiente, exercitationem distinctio ducimus repellat nesciunt! Dignissimos, saepe ex perspiciatis sequi praesentium adipisci repellendus veniam sed laboriosam? Architecto autem odit incidunt doloribus et, tempora possimus dolorem cupiditate. Voluptatum molestias temporibus eligendi ut consequatur numquam, debitis alias perferendis quasi quos. Sequi, voluptate nihil. Possimus, placeat earum. Commodi nesciunt eos blanditiis sit numquam nam ipsa, tenetur odio, expedita suscipit aut odit repudiandae quos eum earum quasi molestias est fuga? Eos quibusdam sit veritatis eaque est aperiam saepe. Praesentium modi, amet culpa corporis quas sunt minus voluptatum?
+          </div>
+        </li>
+        <li>
+          <label for="third"><h5>Can I schedule future transfers?</h5><span>-></span></label>
+          <input type="radio" name="accordion" id="third">
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!</div>
+        </li>
+        <li>
+          <label for="fourth"><h5>When can I use Banking App services?</h5><span>-></span></label>
+          <input type="radio" name="accordion" id="fourth">
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!</div>
+        </li>
+        <li>
+          <label for="fifth"><h5>Can I create my own password that is easy for me to remember?</h5><span>-></span></label>
+          <input type="radio" name="accordion" id="fifth">
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!</div>
+        </li>
+        <li>
+          <label for="sixth"><h5>What happens if I forget or lose my password?</h5><span>-></span></label>
+          <input type="radio" name="accordion" id="sixth">
+          <div class="content body-text-s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae optio doloremque nulla voluptates labore velit id beatae perferendis soluta inventore, hic vel voluptatum cum aperiam impedit libero asperiores neque laborum!</div>
+        </li>
+      </ul>
+    </div>
+    <a href="#" class="btn-l btn-primary">Contact us now</a>
+    <div class="contact-us">
+      <div class="contact-box phone">
+        <div id="icon-primary">
+          <i class="fa-solid fa-phone-volume fa-lg"></i>
+        </div>
+        <small class="body-text-s">Still have questions?</small>
+        <a href="#">Contact us -></a>
+      </div>
+      <div class="contact-box chat">
+        <div id="icon-green">
+          <i class="fa-solid fa-comment-dots fa-flip-horizontal fa-lg"></i>
+        </div>
+        <small class="body-text-s">Don't like phone calls?</small>
+        <a href="#">Contact us -></a>
+      </div>
+    </div>
+  </section>
+
+  <section class="subscribe">
+    <div class="newsletter-logo">
+      <figure>
+        <img src="/img/notification-icon-1.svg" alt="Bell-icon">
+      </figure>
+      <div class="subscribe-heading">
+        <h5 id="subscribe-mobile">Subscribe to our newsletter</h5>
+        <h5 id="subscribe-desktop">to stay informed about latest updates</h5>
+      </div>
+    </div>
+    <form action="#" class="newsletter">
+      <div class="mail-icon"><i class="fa-regular fa-envelope fa-lg"></i></div>
+      <input type="email" name="email" id="email" placeholder="Your email">
+      <input type="submit" value="Subscribe" class="btn-primary">
+    </form>
+  </section>
+  <footer class="footer">
+      <small>© 2024 Silicon. All rights reserved.</small>
+      <small>Credit MadrasThemes</small>
+    </footer>
+
+
 </body>
 </html>
